Slight tweak to description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "imgui-terminal"
 version = "0.1.0"
 edition = "2018"
 authors = ["Mike Waychison <mike@waychison.com>"]
-description = "High-level Rust bindings to imgui-terminal, a terminal implementation for Dear ImGui."
+description = "High-level Rust bindings for imgui-terminal, a terminal implementation for Dear ImGui."
 homepage = "https://github.com/waych/imgui-terminal-rs"
 repository = "https://github.com/waych/imgui-terminal-rs"
 license = "MIT/Apache-2.0"
